k8s/services/lubelogger/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lubelogger
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 17746
        runAsGroup: 17746
        fsGroup: 17746
      containers:
        - name: atuin
          image: ghcr.io/hargata/lubelogger
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /App/data
              subPath: data
            - name: data
              mountPath: /.aspnet/DataProtection-Keys
              subPath: keys
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lubelogger-data
