k8s/services/lubelogger/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
