k8s/services/lubelogger/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lubelogger
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: lubelogger
  hostnames:
    - lube.risson.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: lubelogger
          port: 80
